--- a/css/library.css
+++ b/css/library.css
@@ -595,8 +595,17 @@ div#visualizer-types ul, div#visualizer-types form p {
 
 .vizualizer-renew-notice-close-icon {
 	position: absolute;
-	top: 10px;
-	right: 10px;
+	top: -10px;
+	right: -70px;
 	cursor: pointer;
 	color: #333;
+	background: none;
+	border: none;
+	padding: 0;
+	outline: none;
+	/* Reset button styles */
+	display: inline-block;
+	font: inherit;
+	text-align: inherit;
+	text-decoration: none;
 }
