feat: add banner support

--- a/css/library.css
+++ b/css/library.css
@@ -34,6 +34,11 @@
 #visualizer-content-wrapper {
     padding: 0;
 }
+
+.visualizer-banner {
+	margin: 40px 0;
+}
+
 #visualizer-library {
 	width: auto;
 	margin: 20px -10px;
